--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "amicus-hotel-search-api",
   "version": "1.0.0",
   "type": "module",
-  "scripts": { "start": "node server.js" },
+  "scripts": { "start": "set PORT=5000 && node server.js" },
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
